--- a/02_Building_a_Text_Classifier.ipynb
+++ b/02_Building_a_Text_Classifier.ipynb
@@ -38,26 +38,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 📚 Content\n",
-        "\n",
-        "- [2.1 Data Preparation](#2-1-data-preparation)\n",
-        "  - [2.1.1 Download the Twitter Dataset from NLTK](#2-1-1-download-the-twitter-dataset-from-nltk)\n",
-        "  - [2.1.2 Gather the Sentiment Classes](#2-1-2-gather-the-sentiment-classes)\n",
-        "  - [2.1.3 Extract Emoticons Using Regular Expressions](#2-1-3-extract-emoticons-using-regular-expressions)\n",
-        "  - [2.1.4 Emoticons Frequency](#2-1-4-emoticons-frequency)\n",
-        "  - [2.1.5 Remove Emoticons](#2-1-5-remove-emoticons)\n",
-        "- [2.2 Prepare the Dataset](#2-2-prepare-the-dataset)\n",
-        "  - [2.2.1 Train-Test Split](#2-2-1-train-test-split)\n",
-        "  - [2.2.2 Convert Text into Feature Vectors](#2-2-2-convert-text-into-feature-vectors)\n",
-        "  - [2.2.3 Limit the Vocabulary](#2-2-3-limit-the-vocabulary)\n",
-        "- [2.3 Build the Model](#2-3-build-the-model)\n",
-        "  - [2.3.1 Train the Classifier](#2-3-1-train-the-classifier)\n",
-        "  - [2.3.2 Make Predictions](#2-3-2-make-predictions)\n",
-        "- [2.4 Model Evaluation](#2-4-model-evaluation)\n",
-        "  - [2.4.1 Evaluating the Accuracy, Precision and Recall of the Model's Predictions](#2-4-1-evaluating-the-accuracy-precision-and-recall-of-the-models-predictions)\n",
-        "\n"
-      ],
+      "source": [],
       "metadata": {
         "id": "uv1QdENZrY2s"
       }
@@ -69,7 +50,7 @@
       },
       "source": [
         "\n",
-        "<h2 id=\"data-preparation\">Data Preparation</h2>\n",
+        "#2.1 Data Preparation\n",
         "Proper data preparation is a critical step in any Natural Language Processing (NLP) pipeline.\n",
         "\n",
         "It ensures the quality and consistency of the input data, which directly impacts model performance.\n"
@@ -147,8 +128,6 @@
         "        print(f\"Tweet {i + 1}:\\n{tweet}\\n\")"
       ],
       "metadata": {
-        "id": "fpXOrICgcAlp",
-        "outputId": "6123871d-cbe5-41ca-8395-3e3137560d70",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 188,
@@ -161,7 +140,9 @@
             "354d57dbf49d4399b494c6fbe95d31c4",
             "52b85b65226647b7a15732dfc8c84be7"
           ]
-        }
+        },
+        "id": "fpXOrICgcAlp",
+        "outputId": "6123871d-cbe5-41ca-8395-3e3137560d70"
       },
       "execution_count": 44,
       "outputs": [
@@ -212,11 +193,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "lfJXuvtTczqs",
-        "outputId": "6dfe14bb-e6fd-4fd9-f25c-55a45b8bc5d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lfJXuvtTczqs",
+        "outputId": "6dfe14bb-e6fd-4fd9-f25c-55a45b8bc5d5"
       },
       "execution_count": 45,
       "outputs": [
@@ -247,8 +228,6 @@
         "        print(f\"{sentiment} Tweet {i+1}:\\n{tweet}\\n\")\n"
       ],
       "metadata": {
-        "id": "baag3ybCdB5k",
-        "outputId": "ccf637ea-25eb-4a4b-e66b-a602a49dec0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 185,
@@ -264,7 +243,9 @@
             "23fe5fa92dd84a50b2e680e6d297bfa9",
             "ad4022c42c1f4fe0ba9b78ca492260f9"
           ]
-        }
+        },
+        "id": "baag3ybCdB5k",
+        "outputId": "ccf637ea-25eb-4a4b-e66b-a602a49dec0d"
       },
       "execution_count": 47,
       "outputs": [
@@ -341,8 +322,6 @@
         "    print(f\"Emoticons found: {matches}\")\n"
       ],
       "metadata": {
-        "id": "bSOBWxwld93I",
-        "outputId": "0f82058c-930a-48e2-fb4d-04c22e29f38b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85,
@@ -355,7 +334,9 @@
             "5385338d7e764b9c90873bcba5af28b5",
             "d03da6d392124d22a1e88de92841e3c0"
           ]
-        }
+        },
+        "id": "bSOBWxwld93I",
+        "outputId": "0f82058c-930a-48e2-fb4d-04c22e29f38b"
       },
       "execution_count": 51,
       "outputs": [
@@ -777,7 +758,6 @@
       "execution_count": 78,
       "metadata": {
         "id": "wWghucxwufOf",
-        "outputId": "da13979d-9704-4af7-a046-32b447ac7f61",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 727,
@@ -790,7 +770,8 @@
             "39e228c3ee934bbba3fc772b8383e3a3",
             "1a2721dd2495400d9bce00280e7c5676"
           ]
-        }
+        },
+        "outputId": "da13979d-9704-4af7-a046-32b447ac7f61"
       },
       "outputs": [
         {
@@ -2009,8 +1990,6 @@
         "    display(df.T.rename(columns={0: \"Frequency\"}))"
       ],
       "metadata": {
-        "id": "3jOToGcBk-lM",
-        "outputId": "c0b848bd-7a02-4b69-bf16-653ecfe4e9b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 401,
@@ -2023,7 +2002,9 @@
             "d5ef12a4d5ab4483826d018853267081",
             "a3baa557905447069270c533749f1131"
           ]
-        }
+        },
+        "id": "3jOToGcBk-lM",
+        "outputId": "c0b848bd-7a02-4b69-bf16-653ecfe4e9b4"
       },
       "execution_count": 89,
       "outputs": [
@@ -3083,12 +3064,12 @@
         "display(confidence_df)"
       ],
       "metadata": {
-        "id": "0_6i6_HvoydL",
-        "outputId": "95d52c14-ff2a-4f0a-fdde-a0ea4ad3f57a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 555
-        }
+        },
+        "id": "0_6i6_HvoydL",
+        "outputId": "95d52c14-ff2a-4f0a-fdde-a0ea4ad3f57a"
       },
       "execution_count": 102,
       "outputs": [
@@ -3815,8 +3796,6 @@
         "    print(f\"Confidence rate --> Negative: {probs[0]*100:.2f}%, Positive: {probs[1]*100:.2f}%\")\n"
       ],
       "metadata": {
-        "id": "Hs12smqho6Qd",
-        "outputId": "327e634a-7271-4551-ad5a-b14978503877",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102,
@@ -3829,7 +3808,9 @@
             "ba33484a36384672966b784e887e977a",
             "c06ab1506c474647a41f840c48381194"
           ]
-        }
+        },
+        "id": "Hs12smqho6Qd",
+        "outputId": "327e634a-7271-4551-ad5a-b14978503877"
       },
       "execution_count": 106,
       "outputs": [
@@ -3863,7 +3844,7 @@
       },
       "source": [
         "\n",
-        "<h2 id=\"#model-evaluation\">2.4 Model evaluation</h2>"
+        "#2.4 Model evaluation"
       ]
     },
     {
@@ -3895,11 +3876,11 @@
       "execution_count": 112,
       "metadata": {
         "id": "LzzOZ-xzee3w",
-        "outputId": "e9427ad6-4492-4ed7-9f07-0f36d5ab7ce7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 773
-        }
+        },
+        "outputId": "e9427ad6-4492-4ed7-9f07-0f36d5ab7ce7"
       },
       "outputs": [
         {
