--- a/02_Building_a_Text_Classifier.ipynb
+++ b/02_Building_a_Text_Classifier.ipynb
@@ -4292,19 +4292,39 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "## 2.1 Data Preparation"
+        "from ipywidgets import widgets\n",
+        "from IPython.display import display\n",
+        "import ipywidgets\n",
+        "ipywidgets.Widget.widget_types"
       ],
       "metadata": {
-        "id": "7-f6Vvo6tR5v"
-      }
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G4W1EN_LtQ1w",
+        "outputId": "8dcf915a-8696-4f62-b69c-d8cca5680100"
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<ipywidgets.widgets.widget.WidgetRegistry at 0x7d790c3d0cd0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "G4W1EN_LtQ1w"
+        "id": "MkwvlRK4vOn8"
       },
       "execution_count": null,
       "outputs": []
