Added one widget

--- a/02_Building_a_Text_Classifier.ipynb
+++ b/02_Building_a_Text_Classifier.ipynb
@@ -119,19 +119,48 @@
     {
       "cell_type": "code",
       "source": [
-        "# # Let's some tweets. you can play whit the bar to see different tweets\n",
-        "# from ipywidgets import interact\n",
-        "# @interact(num_tweets=(1, 20))\n",
-        "# def preview_tweets(num_tweets=5):\n",
-        "#     print(f\"Displaying the first {num_tweets} tweets:\\n\" + \"*\" * 100)\n",
-        "#     for i, tweet in enumerate(tweets[:num_tweets]):\n",
-        "#         print(f\"Tweet {i + 1}:\\n{tweet}\\n\")"
+        "# Let's some tweets. you can play whit the bar to see different tweets\n",
+        "from ipywidgets import interact\n",
+        "@interact(num_tweets=(1, 20))\n",
+        "def preview_tweets(num_tweets=5):\n",
+        "    print(f\"Displaying the first {num_tweets} tweets:\\n\" + \"*\" * 100)\n",
+        "    for i, tweet in enumerate(tweets[:num_tweets]):\n",
+        "        print(f\"Tweet {i + 1}:\\n{tweet}\\n\")"
       ],
       "metadata": {
-        "id": "fpXOrICgcAlp"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 344,
+          "referenced_widgets": [
+            "a7010818a3bc4c20966713909434b4c1",
+            "ed9d51526f75486190ad21f818e01b2b",
+            "4393e3311fc04e059249ed4b24c46b93",
+            "609d8ffcd09440d78ae81483f537de03",
+            "61e8005f23544c93b628c9cc9defe492",
+            "ce8b6d6b3e1645c396921cd6bc8a2498",
+            "057a842b1f6b48068112cb941921f1cd"
+          ]
+        },
+        "id": "fpXOrICgcAlp",
+        "outputId": "39576bb2-44fa-4609-9af7-a39e765896bf"
       },
-      "execution_count": 138,
-      "outputs": []
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "interactive(children=(IntSlider(value=5, description='num_tweets', max=20, min=1), Output()), _dom_classes=('w…"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "a7010818a3bc4c20966713909434b4c1"
+            }
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3975,6 +4004,275 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.13"
+    },
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "a7010818a3bc4c20966713909434b4c1": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "VBoxModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [
+              "widget-interact"
+            ],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "VBoxModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "VBoxView",
+            "box_style": "",
+            "children": [
+              "IPY_MODEL_ed9d51526f75486190ad21f818e01b2b",
+              "IPY_MODEL_4393e3311fc04e059249ed4b24c46b93"
+            ],
+            "layout": "IPY_MODEL_609d8ffcd09440d78ae81483f537de03"
+          }
+        },
+        "ed9d51526f75486190ad21f818e01b2b": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "IntSliderModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "IntSliderModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "IntSliderView",
+            "continuous_update": true,
+            "description": "num_tweets",
+            "description_tooltip": null,
+            "disabled": false,
+            "layout": "IPY_MODEL_61e8005f23544c93b628c9cc9defe492",
+            "max": 20,
+            "min": 1,
+            "orientation": "horizontal",
+            "readout": true,
+            "readout_format": "d",
+            "step": 1,
+            "style": "IPY_MODEL_ce8b6d6b3e1645c396921cd6bc8a2498",
+            "value": 5
+          }
+        },
+        "4393e3311fc04e059249ed4b24c46b93": {
+          "model_module": "@jupyter-widgets/output",
+          "model_name": "OutputModel",
+          "model_module_version": "1.0.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/output",
+            "_model_module_version": "1.0.0",
+            "_model_name": "OutputModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/output",
+            "_view_module_version": "1.0.0",
+            "_view_name": "OutputView",
+            "layout": "IPY_MODEL_057a842b1f6b48068112cb941921f1cd",
+            "msg_id": "",
+            "outputs": [
+              {
+                "output_type": "stream",
+                "name": "stdout",
+                "text": [
+                  "Displaying the first 5 tweets:\n",
+                  "****************************************************************************************************\n",
+                  "Tweet 1:\n",
+                  "I can't believe how much fun I'm having learning to train a text classifier!\n",
+                  "\n",
+                  "Tweet 2:\n",
+                  "I am really confused. I want my mommy.\n",
+                  "\n",
+                  "Tweet 3:\n",
+                  "The internet connection has been pretty annoying today!\n",
+                  "\n",
+                  "Tweet 4:\n",
+                  "They just played my favourite song on the radio.\n",
+                  "\n",
+                  "Tweet 5:\n",
+                  "I don't like going to the dentist.\n",
+                  "\n"
+                ]
+              }
+            ]
+          }
+        },
+        "609d8ffcd09440d78ae81483f537de03": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "61e8005f23544c93b628c9cc9defe492": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "ce8b6d6b3e1645c396921cd6bc8a2498": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "SliderStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "SliderStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "description_width": "",
+            "handle_color": null
+          }
+        },
+        "057a842b1f6b48068112cb941921f1cd": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        }
+      }
     }
   },
   "nbformat": 4,
